# mixscatter

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  publish-to-pypi.yml  test.yml  type_check.yml
api/core_api/: index.html
api/liquidstructure_api/: index.html
api/mixture_api/: index.html
api/scatteringmodel_api/: index.html
background/: index.html
docs/: background.md  index.md
docs/api/: core_api.md  liquidstructure_api.md  mixture_api.md  scatteringmodel_api.md
docs/getting_started/: getting-started.md  liquid-structure.md  mixtures.md  scattering-models.md
examples/: simple_example.py
getting_started/getting-started/: index.html
getting_started/liquid-structure/: index.html
getting_started/mixtures/: index.html
getting_started/scattering-models/: index.html
search/: search_index.json
src/mixscatter/: __init__.py  core.py
src/mixscatter/liquidstructure/: __init__.py  liquidstructure.py
src/mixscatter/mixture/: __init__.py  mixture.py
src/mixscatter/scatteringmodel/: __init__.py  scatteringmodel.py
tests/: test_core.py  test_liquid_structure.py  test_mixture.py  test_scattering_model.py
